--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,11 @@
     "angular": "~1.4.2",
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "less": "~2.5.1",
+    "ui-router": "~0.2.15",
+    "angular-bootstrap": "~0.13.0",
+    "angular-animate": "~1.4.2",
+    "angular-hotkeys": "~0.2.2"
   }
 }
