--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.2",
+    "angular": "~1.4",
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
     "bootstrap": "~3.3.5",
@@ -22,6 +22,7 @@
     "ui-router": "~0.2.15",
     "angular-bootstrap": "~0.13.0",
     "angular-animate": "~1.4.2",
-    "angular-hotkeys": "~0.2.2"
+    "angular-hotkeys": "~0.2.2",
+    "fontawesome": "~4.3.0"
   }
 }
