Added grunt server to the node libs. UPdated libraries. Cleaned up. Updated bower packages.

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-bootstrap": "~0.13.0",
     "angular-animate": "~1.4.2",
     "angular-hotkeys": "~0.2.2",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "ngtweet": "~0.3.1"
   }
 }
