--- a/package.json
+++ b/package.json
@@ -18,6 +18,39 @@
   "homepage": "https://github.com/dktrvamp/web#readme",
   "devDependencies": {
     "less": "^2.5.1"
-  
+
+  },
+  "devDependencies": {
+    "grunt": "~0.4",
+    "grunt-angular-templates": "~0.5",
+    "grunt-contrib-clean": "~0.5",
+    "grunt-contrib-concat": "~0.3",
+    "grunt-contrib-connect": "~0.6",
+    "grunt-contrib-copy": "~0.5",
+    "grunt-contrib-cssmin": "~0.7",
+    "grunt-contrib-htmlmin": "~0.1",
+    "grunt-contrib-imagemin": "~0.4",
+    "grunt-contrib-jasmine": "~0.5",
+    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-less": "~0.8",
+    "grunt-contrib-uglify": "~0.2",
+    "grunt-contrib-watch": "~0.5",
+    "grunt-dom-munger": "~3.1",
+    "grunt-karma": "~0.6.2",
+    "grunt-ng-annotate": "^0.10.0",
+    "grunt-text-replace": "~0.3.11",
+    "grunt-zip": "~0.13.0",
+    "karma": "~0.10.9",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-coffee-preprocessor": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "karma-requirejs": "~0.2.1",
+    "karma-script-launcher": "~0.1.0",
+    "load-grunt-tasks": "~0.2",
+    "requirejs": "~2.1.11"
+  }
 }
 
