Updated the hatches file.

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,11 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+    RewriteCond %{HTTP_HOST} ^drvaudio\.com$
+    RewriteRule ^(.*) http://www.drvaudio.com/$1 [R=301]
   	# If an existing asset or directory is requested go to it as it is
-  	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-  	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-  	RewriteRule ^ - [L]
+  	# RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+  	# RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+  	# RewriteRule ^ - [L]
   	# If the requested resource doesn't exist, use index.html
   	RewriteRule ^ /index.html
 </IfModule>
