Added rewrite condition to the htaccess.

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,10 @@
   	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
   	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
   	RewriteRule ^ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    AddType text/css .css
+    AddType text/javascript .js
   	# If the requested resource doesn't exist, use index.html
   	RewriteRule ^ /index.html
 </IfModule>
