--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
 <IfModule mod_rewrite.c>
-	RewriteEngine On
+    Header set Access-Control-Allow-Origin: *
+
+    Header set Access-Control-Allow-Headers: content-type
+
+    Header set Access-Control-Allow-Methods: *
+	  RewriteEngine On
     RewriteCond %{HTTP_HOST} !^www\.
     RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
     # RewriteCond %{HTTP_HOST} ^drvaudio\.com$
@@ -10,7 +15,7 @@
   	RewriteRule ^ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    Header set Access-Control-Allow-Origin: *
+
   	# If the requested resource doesn't exist, use index.html
   	RewriteRule ^ /index.html
 </IfModule>
