--- a/.htaccess
+++ b/.htaccess
@@ -19,9 +19,9 @@
     # Header set Access-Control-Allow-Headers: content-type
 
     # Header set Access-Control-Allow-Methods: *
-    RewriteRule ^/api(.*)\.json$ /api$1.json [CORS=True]
-    Header set Access-Control-Allow-Origin "*" env=CORS
-    Header set Access-Control-Allow-Methods "GET" env=CORS
-    Header set Access-Control-Allow-Credentials "false" env=CORS
+    # RewriteRule ^/api(.*)\.json$ /api$1.json [CORS=True]
+    # Header set Access-Control-Allow-Origin "*" env=CORS
+    # Header set Access-Control-Allow-Methods "GET" env=CORS
+    # Header set Access-Control-Allow-Credentials "false" env=CORS
 
 </IfModule>
