--- a/.htaccess
+++ b/.htaccess
@@ -23,5 +23,9 @@
     # Header set Access-Control-Allow-Origin "*" env=CORS
     # Header set Access-Control-Allow-Methods "GET" env=CORS
     # Header set Access-Control-Allow-Credentials "false" env=CORS
+    # Cors
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
+    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
 </IfModule>
