--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+<IfModule mod_headers.c>
+    # Cors
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
+    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+
+</IfModule>
 <IfModule mod_rewrite.c>
 
 	  RewriteEngine On
@@ -14,18 +21,7 @@
 
   	# If the requested resource doesn't exist, use index.html
   	RewriteRule ^ /index.html
-    # Header set Access-Control-Allow-Origin: *
-
-    # Header set Access-Control-Allow-Headers: content-type
-
-    # Header set Access-Control-Allow-Methods: *
-    # RewriteRule ^/api(.*)\.json$ /api$1.json [CORS=True]
-    # Header set Access-Control-Allow-Origin "*" env=CORS
-    # Header set Access-Control-Allow-Methods "GET" env=CORS
-    # Header set Access-Control-Allow-Credentials "false" env=CORS
-    # Cors
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
-    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
-
+    # CORS OPTIONS (add this too)
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
