--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
-<IfModule mod_headers.c>
+<ifModule mod_headers.c>
     # Cors
     Header always set Access-Control-Allow-Origin "*"
     Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
     Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
-</IfModule>
+</ifModule>
 <IfModule mod_rewrite.c>
 
 	  RewriteEngine On
