--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,8 @@
 <ifModule mod_headers.c>
-    # Cors
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
-    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
-
+    Header always set Access-Control-Allow-Origin: "*"
+    Header always set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS"
+    Header always set Access-Control-Allow-Headers "X-Requested-With, content-type"
+    # Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
 </ifModule>
 <IfModule mod_rewrite.c>
 
