--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,14 @@
 <ifModule mod_headers.c>
+    SetEnvIf Origin "^http(s)?://(.+\.)?(domain_one\.com|domain_two\.net)$" REQUEST_ORIGIN=$0
     Header always set Access-Control-Allow-Origin: "*"
-    Header always set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS"
-    Header always set Access-Control-Allow-Headers "X-Requested-With, content-type"
+    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+    Header always set Access-Control-Max-Age "1000"
+    Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
     # Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
+    # CORS OPTIONS (add this too)
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
 </ifModule>
 <IfModule mod_rewrite.c>
 
@@ -20,7 +26,4 @@
 
   	# If the requested resource doesn't exist, use index.html
   	RewriteRule ^ /index.html
-    # CORS OPTIONS (add this too)
-    RewriteCond %{REQUEST_METHOD} OPTIONS
-    RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
