--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-<ifModule mod_headers.c>
-    SetEnvIf Origin "^http(s)?://(.+\.)?(domain_one\.com|domain_two\.net)$" REQUEST_ORIGIN=$0
+<IfModule mod_headers.c>
+    SetEnvIf Origin "^http(s)?://(.+\.)?(drvaudio\.com)$" REQUEST_ORIGIN=$0
     Header always set Access-Control-Allow-Origin: "*"
     Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
     Header always set Access-Control-Max-Age "1000"
@@ -9,7 +9,7 @@
     RewriteEngine On
     RewriteCond %{REQUEST_METHOD} OPTIONS
     RewriteRule ^(.*)$ $1 [R=200,L]
-</ifModule>
+</IfModule>
 <IfModule mod_rewrite.c>
 
 	  RewriteEngine On
