--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
 <IfModule mod_headers.c>
-    SetEnvIf Origin "^http(s)?://(.+\.)?(drvaudio\.com)$" REQUEST_ORIGIN=$0
-    Header always set Access-Control-Allow-Origin: "*"
+    Header always set Access-Control-Allow-Origin: "http://www.drvaudio.com/#/home"
     Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
     Header always set Access-Control-Max-Age "1000"
     Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
