--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,14 @@
 <IfModule mod_headers.c>
-    Header always set Access-Control-Allow-Origin: "http://www.drvaudio.com/#/home"
-    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
-    Header always set Access-Control-Max-Age "1000"
-    Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+    Header always set Access-Control-Allow-Origin "*"
+    # Header always set Access-Control-Allow-Origin: "http://www.drvaudio.com/#/home"
+    # Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+    # Header always set Access-Control-Max-Age "1000"
+    # Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
     # Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
     # CORS OPTIONS (add this too)
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} OPTIONS
-    RewriteRule ^(.*)$ $1 [R=200,L]
+    # RewriteEngine On
+    # RewriteCond %{REQUEST_METHOD} OPTIONS
+    # RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
 <IfModule mod_rewrite.c>
 
