--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_headers.c>
     Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "GET"
     # Header always set Access-Control-Allow-Origin: "http://www.drvaudio.com/#/home"
     # Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
     # Header always set Access-Control-Max-Age "1000"
