--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,12 @@
 <IfModule mod_headers.c>
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Methods "GET"
-    # Header always set Access-Control-Allow-Origin: "http://www.drvaudio.com/#/home"
-    # Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
-    # Header always set Access-Control-Max-Age "1000"
-    # Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
-    # Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
-    # CORS OPTIONS (add this too)
-    # RewriteEngine On
-    # RewriteCond %{REQUEST_METHOD} OPTIONS
-    # RewriteRule ^(.*)$ $1 [R=200,L]
+    Header always set Access-Control-Allow-Origin "http://www.drvaudio.com"
+    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+    Header always set Access-Control-Max-Age "1000"
+    Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
 <IfModule mod_rewrite.c>
 
