--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,18 @@
 <IfModule mod_headers.c>
-    Header always set Access-Control-Allow-Origin "http://www.drvaudio.com"
-    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
-    Header always set Access-Control-Max-Age "1000"
-    Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
-    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} OPTIONS
-    RewriteRule ^(.*)$ $1 [R=200,L]
+    # Header always set Access-Control-Allow-Origin "http://www.drvaudio.com"
+    # Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+    # Header always set Access-Control-Max-Age "1000"
+    # Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+    # Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Access-Control-Allow-Origin"
+    # RewriteEngine On
+    # RewriteCond %{REQUEST_METHOD} OPTIONS
+    # RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
 <IfModule mod_rewrite.c>
 
 	  RewriteEngine On
     RewriteCond %{HTTP_HOST} !^www\.
+    RewriteCond %{HTTP_HOST} ^www\.drvaudio\.com/m/$
     RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
     # RewriteCond %{HTTP_HOST} ^drvaudio\.com$
     # RewriteRule ^(.*) http://www.drvaudio.com/$1 [R=301]
