--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@
 
 	  RewriteEngine On
     RewriteCond %{HTTP_HOST} !^www\.
-    RewriteCond %{HTTP_HOST} ^www\.drvaudio\.com/m/$
+    RewriteCond %{HTTP_HOST} ^www\.drvaudio\.com\/m\/$
     RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
     # RewriteCond %{HTTP_HOST} ^drvaudio\.com$
     # RewriteRule ^(.*) http://www.drvaudio.com/$1 [R=301]
